Fix Zoom in flicker issue and change code style for importing actions

--- a/src/client/component/image.panel/ImagePanel.scss
+++ b/src/client/component/image.panel/ImagePanel.scss
@@ -7,16 +7,12 @@
     display: flex;
     justify-content: center; /* align horizontal */
     align-items: center; /* align vertical */
+    user-select: none;
     img{
       -webkit-user-drag: none;
+      will-change: transform;
     }
   }
-}
-
-.dragging {
-  color:white;
-  content: "Coming Soon";
-  background: rgba(255, 255, 255, 0.50);
 }
 
 .dropMessage {
